# vmware-aria-ops-toolkit

./: .gitignore  CLAUDE.md  Containerfile  Dockerfile  Dockerfile.scraper  GEMINI.md  README.md  REQUIREMENTS.md  USAGE_EXAMPLES.md  compose.jobs.yaml  compose.local.yaml  compose.yaml  docker-compose.yaml  env.example.yaml  litellm_config.yaml  litellm_config_local.yaml  pyproject.toml
.chainlit/: config.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: auth.py  nsxt.py
app/clients/: base_client.py  nsxt_client.py
app/core/: audit_log.py  job_tracker.py
app/middleware/: error_handler.py
app/models/: errors.py  nsxt.py  responses.py
app/operations/nsxt/: segments.py
config/: sites.yml.example
deploy/grafana/provisioning/dashboards/: dashboard.yml  vmware_ai_agent_dashboard.json
docs/: README.md  cli.md  embedding.md  modules.md  reranking.md  security.md
examples/: README.md
examples/01_load_balancer_service/: load_balancer_service.robot
examples/02_t1_gateway_firewall/: t1_gateway_firewall.robot
examples/03_t0_vrf_bgp_bfd/: t0_vrf_bgp_bfd.robot
scripts/: __init__.py  gen_docs.sh  ingest.py
src/: __init__.py
src/ariaops_mcp/: circuit_breaker.py  client.py  config.py  ldap_auth.py  logging_config.py
src/ariaops_mcp/skills/: __init__.py  executor.py  loader.py  models.py
src/ariaops_mcp/tools/: _common.py  alerts.py  capacity.py  discovery.py  metrics.py
src/mcp_server/: __main__.py  server.py
src/nsxt_robot/: __init__.py
src/nsxt_robot/resources/: bbprobe_keywords.robot  common.robot  ssh_keywords.robot  traffic_keywords.robot
src/retrieval/: __init__.py
src/scraper/: broadcom_kb.py  parser.py
src/vmware_ai_ops_agent/: __init__.py  config.py  graph.py
src/vmware_ai_ops_agent/actions/: __init__.py  notifications.py
src/vmware_ai_ops_agent/analysis/: __init__.py  llm_engine.py
src/vmware_ai_ops_agent/collectors/: __init__.py
src/vmware_ai_ops_agent/mcp_clients/: __init__.py  ariaops.py  base.py  entrag.py
src/vmware_ai_ops_agent/reporting/: __init__.py
src/vmware_ai_ops_agent/tools/: search.py
test-e2e/oauth/: mcp.env
test-ui/: keycloak_auth.py
test-ui/chainlit/: README.md  app.py
test-ui/tests/: test_app.py
tests/: __init__.py  conftest.py  test_agent.py  test_circuit_breaker.py  test_client.py  test_client_retry.py  test_config.py  test_custom_patterns.py  test_executor.py  test_instances.py  test_ldap_auth.py  test_mcp_clients.py  test_server.py
tests/01_infra/: infra_health.robot
tests/05_ha_vip/: ha_vip.robot
tests/06_snat/: snat.robot
tests/07_alb_l4/: alb_l4.robot
tests/08_dfw/: dfw.robot
tests/config/: test_settings.py
tests/integration/: test_api_endpoints.py
tests/scraper/: test_broadcom_kb.py
tests/test_skills/: test_executor.py
tests/test_tools/: test_alerts.py  test_ansible_inventory.py  test_discovery.py  test_reports.py  test_write_ops.py
tests/unit/: test_allowlist.py  test_clients.py  test_job_tracker.py
tests_mock/: mock_nsx_server.py  policy_api_contract.robot
tests_unit/: test_bbprobe_release.py
