[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotframework-nsxt"
dynamic = ["version"]
description = "Robot Framework library for testing VMware NSX-T: Policy/Management API keywords and structured data-plane probing"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["robotframework", "nsx-t", "nsxt", "vmware", "network-testing", "sdn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "robotframework>=6.1",
    "RESTinstance>=1.3.0",
    "robotframework-sshlibrary>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/asnd/robotframework-nsxt"
Repository = "https://github.com/asnd/robotframework-nsxt"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "robotframework-robocop>=8.0.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
]

[tool.hatch.version]
path = "src/nsxt_robot/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nsxt_robot"]

[tool.pytest.ini_options]
testpaths = ["tests_unit"]
pythonpath = ["src", "tests_mock"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true

[tool.robocop.lint]
configure = ["line-too-long.line_length=130"]
ignore = [
    "DEPR05",
    "DEPR06",
    "TAG05",
    "TAG06",
    "NAME02",
    "NAME18",
    "ARG07",
    "ORD03",
    "MISC06",
    "MISC09",
    "VAR05",
    "DOC01",
    "LEN03",
    "LEN07",
    "LEN28",
    "VAR02",
]
